--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -29,6 +31,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.6",
     "concurrently": "^9.0.1",
