--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.ts",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,19 +25,27 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "joi": "^17.13.3",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/handlebars": "^4.0.40",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.6",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^9.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
