--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist",
+    "types": ["node", "jest"],
+
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
