--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-SERVER_DEFAULT_PORT=
-MONGODB_URI=
-MONGODB_URI_TEST=
-JWT_SECRET=
-CLIENT_URL=
+SERVER_DEFAULT_PORT= # The port for your server to run on
+MONGODB_URI= # The URI for your MongoDB database in production
+MONGODB_URI_TEST= # The URI for your MongoDB database in development and testing
+JWT_SECRET= # The secret key for your JWT token
+CLIENT_URL= # The URL for your client application in production
 
-SENDER_EMAIL=
-SG_API_KEY=
+SENDER_EMAIL= # The email address for the sender of the email
+SG_API_KEY= # The SendGrid API key
